--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     <header class="header">
       <div class="container">
         <div class="header-container">
-          <nav class="header-nav">
-            <a class="logo" href="./index.html"
+          <nav class="header-nav-menu">
+            <a class="logo-header-nav" href="./index.html"
               >Web<span class="logo-black">Studio</span></a
             >
-            <ul class="header-menu">
+            <ul class="header-menu-link">
               <li>
-                <a class="menu-nav" href="./index.html">Studio</a>
+                <a class="menu-nav-li" href="./index.html">Studio</a>
               </li>
               <li>
-                <a class="menu-nav" href="">Portfolio</a>
+                <a class="menu-nav-li" href="">Portfolio</a>
               </li>
               <li>
-                <a class="menu-nav" href="">Contacts</a>
+                <a class="menu-nav-li" href="">Contacts</a>
               </li>
             </ul>
           </nav>
-          <address class="header-link">
+          <address class="header-link-address">
             <ul class="header-link-ul">
               <li>
                 <a class="header-link-contact" href="mailto:info@devstudio.com"
@@ -70,28 +70,28 @@
           <h2 class="first-section-title">heading</h2>
           <ul class="first-section-list">
             <li class="first-section-container">
-              <h3>Strategy</h3>
+              <h3 class="first-section-h3">Strategy</h3>
               <p class="first-section-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="first-section-container">
-              <h3>Punctuality</h3>
+              <h3 class="first-section-h3">Punctuality</h3>
               <p class="first-section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="first-section-container">
-              <h3>Diligence</h3>
+              <h3 class="first-section-h3">Diligence</h3>
               <p class="first-section-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="first-section-container">
-              <h3>Technologies</h3>
+              <h3 class="first-section-h3">Technologies</h3>
               <p class="first-section-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -237,7 +237,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo-header-nav" href="./index.html"
           >Web<span class="logo-white">Studio</span></a
         >
         <p class="footer-text">
