--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-container">
+        <div class="header-container-div">
           <nav class="header-nav-menu">
             <a class="logo-header-nav" href="./index.html"
               >Web<span class="logo-black">Studio</span></a
@@ -112,7 +112,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3>Mark Guerrero</h3>
+                <h3 class="hero-section-h3">Mark Guerrero</h3>
                 <p class="first-section-text">Product Designer</p>
               </div>
             </li>
@@ -124,7 +124,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3>Tom Ford</h3>
+                <h3 class="hero-section-h3">Tom Ford</h3>
                 <p class="first-section-text">Frontend Developer</p>
               </div>
             </li>
@@ -136,7 +136,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3>Camila Garcia</h3>
+                <h3 class="hero-section-h3">Camila Garcia</h3>
                 <p class="first-section-text">Marketing</p>
               </div>
             </li>
@@ -148,7 +148,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3>Daniel Wilson</h3>
+                <h3 class="hero-section-h3">Daniel Wilson</h3>
                 <p class="first-section-text">UI Designer</p>
               </div>
             </li>
