--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
           <h2 class="first-section-title">heading</h2>
           <ul class="first-section-list">
             <li class="first-section-container">
-              <h3 class="first-section-h3">Strategy</h3>
+              <h3 class="first-section-h">Strategy</h3>
               <p class="first-section-text">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
             <li class="first-section-container">
-              <h3 class="first-section-h3">Punctuality</h3>
+              <h3 class="first-section-h">Punctuality</h3>
               <p class="first-section-text">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
             <li class="first-section-container">
-              <h3 class="first-section-h3">Diligence</h3>
+              <h3 class="first-section-h">Diligence</h3>
               <p class="first-section-text">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
             <li class="first-section-container">
-              <h3 class="first-section-h3">Technologies</h3>
+              <h3 class="first-section-h">Technologies</h3>
               <p class="first-section-text">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -112,7 +112,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3 class="hero-section-h3">Mark Guerrero</h3>
+                <h3 class="hero-section-h">Mark Guerrero</h3>
                 <p class="first-section-text">Product Designer</p>
               </div>
             </li>
@@ -124,7 +124,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3 class="hero-section-h3">Tom Ford</h3>
+                <h3 class="hero-section-h">Tom Ford</h3>
                 <p class="first-section-text">Frontend Developer</p>
               </div>
             </li>
@@ -136,7 +136,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3 class="hero-section-h3">Camila Garcia</h3>
+                <h3 class="hero-section-h">Camila Garcia</h3>
                 <p class="first-section-text">Marketing</p>
               </div>
             </li>
@@ -148,7 +148,7 @@
                 height="260"
               />
               <div class="persons-text">
-                <h3 class="hero-section-h3">Daniel Wilson</h3>
+                <h3 class="hero-section-h">Daniel Wilson</h3>
                 <p class="first-section-text">UI Designer</p>
               </div>
             </li>
@@ -167,7 +167,7 @@
                 height="300"
               />
               <div class="portfolio-card-content">
-                <h3>Banking App</h3>
+                <h3 class="portfolio-card-content-h3">Banking App</h3>
                 <p class="first-section-text">App</p>
               </div>
             </li>
@@ -179,7 +179,7 @@
                 height="300"
               />
               <div class="portfolio-card-content">
-                <h3>Cashless Payment</h3>
+                <h3 class="portfolio-card-content-h">Cashless Payment</h3>
                 <p class="first-section-text">Marketing</p>
               </div>
             </li>
@@ -191,7 +191,7 @@
                 height="300"
               />
               <div class="portfolio-card-content">
-                <h3>Meditation App</h3>
+                <h3 class="portfolio-card-content-h">Meditation App</h3>
                 <p class="first-section-text">App</p>
               </div>
             </li>
@@ -203,7 +203,7 @@
                 height="300"
               />
               <div class="portfolio-card-content">
-                <h3>Taxi Service</h3>
+                <h3 class="portfolio-card-content-h">Taxi Service</h3>
                 <p class="first-section-text">Marketing</p>
               </div>
             </li>
@@ -215,7 +215,7 @@
                 height="300"
               />
               <div class="portfolio-card-content">
-                <h3>Screen Illustrations</h3>
+                <h3 class="portfolio-card-content-h">Screen Illustrations</h3>
                 <p class="first-section-text">Design</p>
               </div>
             </li>
@@ -227,7 +227,7 @@
                 height="300"
               />
               <div class="portfolio-card-content">
-                <h3>Online Courses</h3>
+                <h3 class="portfolio-card-content-h">Online Courses</h3>
                 <p class="first-section-text">Marketing</p>
               </div>
             </li>
