--- a/index.html
+++ b/index.html
@@ -18,39 +18,37 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
-        <div class="header-container-div">
-          <nav class="header-nav-menu">
-            <a class="logo-header-nav" href="./index.html"
-              >Web<span class="logo-black">Studio</span></a
-            >
-            <ul class="header-menu-link">
-              <li>
-                <a class="menu-nav-li" href="./index.html">Studio</a>
-              </li>
-              <li>
-                <a class="menu-nav-li" href="">Portfolio</a>
-              </li>
-              <li>
-                <a class="menu-nav-li" href="">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="header-link-address">
-            <ul class="header-link-ul">
-              <li>
-                <a class="header-link-contact" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                ><br />
-              </li>
-              <li>
-                <a class="header-link-contact" href="tel:+110001111111"
-                  >+11 (000) 111-11-11</a
-                ><br />
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="header-container-defolt" class="header-container-div">
+        <nav class="header-nav-menu">
+          <a class="logo-header-nav" href="./index.html"
+            >Web<span class="logo-black">Studio</span></a
+          >
+          <ul class="header-menu-link">
+            <li>
+              <a class="menu-nav-li" href="./index.html">Studio</a>
+            </li>
+            <li>
+              <a class="menu-nav-li" href="">Portfolio</a>
+            </li>
+            <li>
+              <a class="menu-nav-li" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-link-address">
+          <ul class="header-link-ul">
+            <li>
+              <a class="header-link-contact" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ><br />
+            </li>
+            <li>
+              <a class="header-link-contact" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              ><br />
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
