--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container-defolt" class="header-container-div">
+      <div class="header-container-div container">
         <nav class="header-nav-menu">
           <a class="logo-header-nav" href="./index.html"
             >Web<span class="logo-black">Studio</span></a
@@ -65,7 +65,7 @@
       </section>
       <section class="first-section">
         <div class="container">
-          <h2 class="first-section-title">heading</h2>
+          <h2 class="first-section-title visually-hidden">heading</h2>
           <ul class="first-section-list">
             <li class="first-section-container">
               <h3 class="first-section-h">Strategy</h3>
