--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
       <section class="first-section">
         <div class="container">
-          <h2 class="first-section-title visually-hidden">heading</h2>
+          <h2 class="visually-hidden">heading</h2>
           <ul class="first-section-list">
             <li class="first-section-container">
               <h3 class="first-section-h">Strategy</h3>
